--- a/contents.html
+++ b/contents.html
@@ -7,7 +7,8 @@
   <body>
 
     <ul>
-      <li><a href="#">Day surgery guide</a></li>
+      <li><a href="steps-to-surgery/cover.html">6 steps to surgery</a></li>
+      <li><a href="day-surgery/cover.html">Day surgery guide</a></li>
     </ul>
   </body>
 
