Finalise image map links

--- a/day-surgery/getting-there.html
+++ b/day-surgery/getting-there.html
@@ -11,26 +11,26 @@
   	<img src="../assets/images/day-guide--getting-there--public__closed.png" width="768" usemap="#map_2" id="public">
   	<img src="../assets/images/day-guide--getting-there--car__closed.png" width="768" usemap="#map_3" id="car" border="0">
     <img src="../assets/images/day-guide--getting-there--bottom.png" width="768" usemap="#map_4" id="bottom" border="0">
-    <map name="map_4">
-      <area shape="rect" coords="29,151,197,197" href="MAPLINK">
-      <area shape="rect" coords="448,356,748,422" href="on-the-day.html">
-    </map>
 
     <map name="map_1">
       <area shape="rect" coords="143,248,310,281" href="#bottom">
-      <area shape="rect" coords="29,511,188,548" href="#MAPS LINK">
+      <area shape="rect" coords="29,511,188,548" href="https://maps.apple.com/maps?address=Whipps%20Cross%20Road,%20London,%20E11%201NR,%20England&auid=17399430592839820642&ll=51.578023,0.002779&lsp=9902&q=Whipps%20Cross%20University%20Hospital&t=m">
       <area shape="rect" coords="25,19,94,56" href="cover.html">
       <area shape="rect" coords="636,14,735,57" href="cover.html">
-  </map>
-
-  <map name="map_2">
-      <area shape="rect" coords="32,153,194,195" href="#MAPS LINK">
-      <area shape="rect" coords="437,349,751,426" href="on-the-day.html">
-      <area shape="rect" coords="28,16,208,54" href="#" id="public-click">
     </map>
-    
+
+    <map name="map_2">
+     <area shape="rect" coords="28,16,208,54" href="#" id="public-click">
+     <area shape="rect" coords="25,301,460,338" href="https://tfl.gov.uk/plan-a-journey/">
+    </map>
+
     <map name="map_3">
       <area shape="rect" coords="26,6,171,59" href="#" id="car-click">
+    </map>
+
+    <map name="map_4">
+      <area shape="rect" coords="29,151,197,197" href="https://maps.apple.com/maps?address=Whipps%20Cross%20University%20Hospital,%20Hospital%20Road,%20London,%20E11,%20England&ll=51.577181,0.002722&q=Whipps%20Cross%20University%20Hospital,%20Hospital%20Road,%20London,%20E11,%20England">
+      <area shape="rect" coords="448,356,748,422" href="on-the-day.html">
     </map>
 
     <script src="../assets/javascripts/jquery-1.12.4.min.js"></script>
