Update image maps

--- a/day-surgery/cover.html
+++ b/day-surgery/cover.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <img src="../assets/images/day-guide--cover.png" width="768" usemap="#map" id="page" border="0">
+    <img src="../assets/images/day-guide--cover.png" usemap="#map" id="page" border="0">
     <map name="map">
       <area shape="rect" coords="35,491,264,537" href="getting-there.html">
       <area shape="rect" coords="34,753,365,800" href="on-the-day.html">
