--- a/day-surgery/getting-there.html
+++ b/day-surgery/getting-there.html
@@ -7,10 +7,10 @@
   </head>
 
   <body>
-    <img src="../assets/images/day-guide--getting-there--top.png" width="768" usemap="#map_1" id="top" border="0">
-  	<img src="../assets/images/day-guide--getting-there--public__closed.png" width="768" usemap="#map_2" id="public">
-  	<img src="../assets/images/day-guide--getting-there--car__closed.png" width="768" usemap="#map_3" id="car" border="0">
-    <img src="../assets/images/day-guide--getting-there--bottom.png" width="768" usemap="#map_4" id="bottom" border="0">
+    <img src="../assets/images/day-guide--getting-there--top.png" usemap="#map_1" id="top" border="0">
+  	<img src="../assets/images/day-guide--getting-there--public__closed.png" usemap="#map_2" id="public">
+  	<img src="../assets/images/day-guide--getting-there--car__closed.png" usemap="#map_3" id="car" border="0">
+    <img src="../assets/images/day-guide--getting-there--bottom.png" usemap="#map_4" id="bottom" border="0">
 
     <map name="map_1">
       <area shape="rect" coords="143,248,310,281" href="#bottom">
