--- a/day-surgery/going-home.html
+++ b/day-surgery/going-home.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <img src="../assets/images/day-guide--going-home.png" width="768" usemap="#map" id="page" border="0">
+    <img src="../assets/images/day-guide--going-home.png" usemap="#map" id="page" border="0">
     <map name="map">
       <area shape="rect" coords="28,19,95,57" href="cover.html">
       <area shape="rect" coords="639,13,739,58" href="cover.html">
