--- a/steps-to-surgery/cover.html
+++ b/steps-to-surgery/cover.html
@@ -7,14 +7,14 @@
   </head>
 
   <body>
-    <img src="../assets/images/steps-to-surgery.png" width="768" usemap="#map" id="page" border="0">
+    <img src="../assets/images/steps-to-surgery.png" usemap="#map" id="page" border="0">
     <map name="map">
-      <area shape="rect" coords="104,687,514,754" href="javascript:alert('This link is not active in this prototype');">
-      <area shape="rect" coords="96,1756,546,1813" href="javascript:alert('This link is not active in this prototype');">
-      <area shape="rect" coords="100,2574,284,2613" href="javascript:alert('This link is not active in this prototype');">
-      <area shape="rect" coords="100,2613,284,2644" href="javascript:alert('This link is not active in this prototype');">
-      <area shape="rect" coords="101,2644,284,2679" href="javascript:alert('This link is not active in this prototype');">
-      <area shape="rect" coords="117,2750,392,2792" href="javascript:alert('This link is not active in this prototype');">
+      <area shape="rect" coords="106,707,533,773" href="javascript:alert('This link is not active in this prototype');">
+      <area shape="rect" coords="88,1804,538,1861" href="javascript:alert('This link is not active in this prototype');">
+      <area shape="rect" coords="101,2738,285,2777" href="javascript:alert('This link is not active in this prototype');">
+      <area shape="rect" coords="99,2779,396,2809" href="javascript:alert('This link is not active in this prototype');">
+      <area shape="rect" coords="99,2810,282,2845" href="javascript:alert('This link is not active in this prototype');">
+      <area shape="rect" coords="119,2920,394,2962" href="javascript:alert('This link is not active in this prototype');">
       <area shape="rect" coords="21,22,121,68" href="../contents.html">
     </map>
   </body>
