--- a/day-surgery/on-the-day.html
+++ b/day-surgery/on-the-day.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <img src="../assets/images/day-guide--on-the-day.png" width="768" usemap="#map" id="page" border="0">
+    <img src="../assets/images/day-guide--on-the-day.png" usemap="#map" id="page" border="0">
     <map name="map">
       <area shape="rect" coords="28,16,97,60" href="cover.html">
       <area shape="rect" coords="638,13,738,59" href="cover.html">
