Using positioned links instead of image maps

--- a/day-surgery/cover.html
+++ b/day-surgery/cover.html
@@ -7,13 +7,37 @@
   </head>
 
   <body>
-    <img src="../assets/images/day-guide--cover.png" usemap="#map" id="page" border="0">
-    <map name="map">
-      <area shape="rect" coords="35,491,264,537" href="getting-there.html">
-      <area shape="rect" coords="34,753,365,800" href="on-the-day.html">
-      <area shape="rect" coords="36,947,197,993" href="going-home.html">
-      <area shape="rect" coords="636,13,736,59" href="../contents.html">
-    </map>
+    <div class="wrapper">
+      <img src="../assets/images/day-guide--cover.png" id="page" border="0">
+
+      <!-- Back to index -->
+      <a href="../contents.html"
+         style="top: 15px;
+                left: 639px;
+                width: 90px;
+                height: 40px;"></a>
+
+      <!-- CTA 1 -->
+      <a href="getting-there.html"
+         style="top: 482px;
+                left: 25px;
+                width: 247px;
+                height: 65px;"></a>
+
+      <!-- CTA 2 -->
+      <a href="on-the-day.html"
+         style="top: 743px;
+                left: 25px;
+                width: 347px;
+                height: 65px;"></a>
+
+      <!-- CTA 3 -->
+      <a href="going-home.html"
+         style="top: 936px;
+                left: 25px;
+                width: 184px;
+                height: 65px;"></a>
+    </div>
   </body>
 
 </html>
