--- a/day-surgery/going-home.html
+++ b/day-surgery/going-home.html
@@ -7,13 +7,37 @@
   </head>
 
   <body>
-    <img src="../assets/images/day-guide--going-home.png" usemap="#map" id="page" border="0">
-    <map name="map">
-      <area shape="rect" coords="28,19,95,57" href="cover.html">
-      <area shape="rect" coords="639,13,739,58" href="cover.html">
-      <area shape="rect" coords="23,1290,324,1365" href="on-the-day.html">
-      <area shape="rect" coords="27,1215,296,1254" href="javascript:alert('This link is not active in this prototype');">
-    </map>
+    <div class="wrapper">
+      <img src="../assets/images/day-guide--going-home.png" id="page" border="0">
+
+      <!-- Back to index -->
+      <a href="../contents.html"
+         style="top: 15px;
+                left: 13px;
+                width: 90px;
+                height: 40px;"></a>
+
+      <!-- Back to index -->
+      <a href="../contents.html"
+         style="top: 15px;
+                left: 639px;
+                width: 90px;
+                height: 40px;"></a>
+
+      <!-- Recovery link -->
+      <a href="on-the-day.html"
+         style="top: 1215px;
+                left: 30px;
+                width: 265px;
+                height: 40px;"></a>
+
+      <!-- Previous page link -->
+      <a href="on-the-day.html"
+         style="top: 1302px;
+                left: 30px;
+                width: 276px;
+                height: 54px;"></a>
+    </div>
   </body>
 
 </html>
