--- a/day-surgery/on-the-day.html
+++ b/day-surgery/on-the-day.html
@@ -7,13 +7,38 @@
   </head>
 
   <body>
-    <img src="../assets/images/day-guide--on-the-day.png" usemap="#map" id="page" border="0">
-    <map name="map">
-      <area shape="rect" coords="28,16,97,60" href="cover.html">
-      <area shape="rect" coords="638,13,738,59" href="cover.html">
-      <area shape="rect" coords="25,1292,219,1364" href="getting-there.html">
-      <area shape="rect" coords="598,1295,745,1362" href="going-home.html">
-    </map>
+    <div class="wrapper">
+      <img src="../assets/images/day-guide--on-the-day.png" id="page" border="0">
+
+      <!-- Back to index -->
+      <a href="../contents.html"
+         style="top: 15px;
+                left: 13px;
+                width: 90px;
+                height: 40px;"></a>
+
+      <!-- Back to index -->
+      <a href="../contents.html"
+         style="top: 15px;
+                left: 639px;
+                width: 90px;
+                height: 40px;"></a>
+
+      <!-- Previous page link -->
+      <a href="getting-there.html"
+         style="top: 1302px;
+                left: 30px;
+                width: 276px;
+                height: 54px;"></a>
+
+      <!-- Next page link -->
+      <a href="going-home.html"
+         style="top: 1302px;
+                left: 459px;
+                width: 276px;
+                height: 54px;"></a>
+    </div>
+
   </body>
 
 </html>
