--- a/steps-to-surgery/cover.html
+++ b/steps-to-surgery/cover.html
@@ -4,17 +4,18 @@
     <title>Prototypes: day surgery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/stylesheets/main.css">
-    <style>
-      a {
-        position: absolute;
-        border: 1px solid red;
-      }
-    </style>
   </head>
 
   <body>
-    <div id="wrapper">
+    <div class="wrapper">
       <img src="../assets/images/steps-to-surgery.png" id="page" border="0">
+
+      <!-- Back to index -->
+      <a href="../contents.html"
+         style="top: 25px;
+                left: 25px;
+                width: 90px;
+                height: 40px;"></a>
 
       <!-- booking CTA -->
       <a href="javascript:alert('This link is not active in this prototype');"
