--- a/steps-to-surgery/cover.html
+++ b/steps-to-surgery/cover.html
@@ -18,14 +18,14 @@
                 height: 40px;"></a>
 
       <!-- booking CTA -->
-      <a href="javascript:alert('This link is not active in this prototype');"
+      <a href="https://www.ebs.ncrs.nhs.uk/"
          style="top: 687px;
                 left: 105px;
                 width: 407px;
                 height: 65px;"></a>
 
       <!-- preparing for pre-op -->
-      <a href="javascript:alert('This link is not active in this prototype');"
+      <a href="http://www.nhs.uk/Video/Pages/Pre-operativeassessments.aspx"
          style="top: 1758px;
                 left: 105px;
                 width: 407px;
@@ -39,20 +39,26 @@
                 height: 30px;"></a>
 
       <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2700px;
+         style="top: 2697px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
       <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2733px;
+         style="top: 2730px;
+                left: 105px;
+                width: 407px;
+                height: 30px;"></a>
+
+      <a href="javascript:alert('This link is not active in this prototype');"
+         style="top: 2763px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
       <!-- recovery -->
       <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2843px;
+         style="top: 2883px;
                 left: 115px;
                 width: 267px;
                 height: 30px;"></a>
