Fix 'back' links

--- a/day-surgery/getting-there.html
+++ b/day-surgery/getting-there.html
@@ -11,7 +11,7 @@
       <img src="../assets/images/day-guide--getting-there--top.png" id="top" border="0">
 
       <!-- Back to index -->
-      <a href="../contents.html"
+      <a href="cover.html"
          style="top: 15px;
                 left: 13px;
                 width: 90px;
