--- a/hernia--day-surgery/going-home.html
+++ b/hernia--day-surgery/going-home.html
@@ -25,7 +25,7 @@
                 height: 40px;"></a>
 
       <!-- Recovery link -->
-      <a href="on-the-day.html"
+      <a href="javascript:alert('This link is not active in this prototype');"
          style="top: 1215px;
                 left: 30px;
                 width: 265px;
