Initial add of joint replacement

--- a/joint-replacement--surgery/cover.html
+++ b/joint-replacement--surgery/cover.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="wrapper">
-      <img src="../assets/images/day-guide--cover__hernia.png" id="page" border="0">
+      <img src="../assets/images/guide--cover__joint-replacement.png" id="page" border="0">
 
       <!-- Back to index -->
       <a href="../contents.html"
@@ -19,21 +19,21 @@
 
       <!-- CTA 1 -->
       <a href="getting-there.html"
-         style="top: 482px;
+         style="top: 470px;
                 left: 25px;
                 width: 247px;
                 height: 65px;"></a>
 
       <!-- CTA 2 -->
-      <a href="on-the-day.html"
-         style="top: 743px;
+      <a href="your-operation.html"
+         style="top: 684px;
                 left: 25px;
-                width: 347px;
+                width: 217px;
                 height: 65px;"></a>
 
       <!-- CTA 3 -->
       <a href="going-home.html"
-         style="top: 936px;
+         style="top: 884px;
                 left: 25px;
                 width: 184px;
                 height: 65px;"></a>
