--- a/contents.html
+++ b/contents.html
@@ -7,8 +7,10 @@
   <body>
 
     <ul>
-      <li><a href="hernia--steps-to-surgery/cover.html">6 steps to surgery</a></li>
-      <li><a href="hernia--day-surgery/cover.html">Day surgery guide</a></li>
+      <li><a href="hernia--steps-to-surgery/cover.html">Hernia: Steps to surgery</a></li>
+      <li><a href="hernia--day-surgery/cover.html">Hernia: Day surgery guide</a></li>
+      <li><a href="joint-replacement--steps-to-surgery/cover.html">Joint replacement: Steps to surgery</a></li>
+      <li><a href="joint-replacement--surgery/cover.html">Joint replacement: Surgery guide</a></li>
     </ul>
   </body>
 
