Update going home

--- a/contents.html
+++ b/contents.html
@@ -2,6 +2,11 @@
 
   <head>
     <title>Prototypes: day surgery</title>
+    <style>
+      li {
+        margin-bottom: 2em;
+      }
+    </style>
   </head>
 
   <body>
