--- a/joint-replacement--surgery/going-home.html
+++ b/joint-replacement--surgery/going-home.html
@@ -4,6 +4,11 @@
     <title>Prototypes: day surgery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/stylesheets/main.css">
+    <style>
+    a {
+      border: 1px solid red;
+    }
+    </style>
   </head>
 
   <body>
@@ -25,15 +30,15 @@
                 height: 40px;"></a>
 
       <!-- Recovery link -->
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 821px;
+      <a href="http://www.nhs.uk/Conditions/Hip-replacement/Pages/Recovery.aspx"
+         style="top: 896px;
                 left: 30px;
                 width: 265px;
                 height: 40px;"></a>
 
       <!-- Previous page link -->
       <a href="your-operation.html"
-         style="top: 916px;
+         style="top: 1025px;
                 left: 30px;
                 width: 276px;
                 height: 54px;"></a>
