Final copy tweak, fix links

--- a/joint-replacement--surgery/going-home.html
+++ b/joint-replacement--surgery/going-home.html
@@ -24,16 +24,23 @@
                 width: 90px;
                 height: 40px;"></a>
 
-      <!-- Recovery link -->
+      <!-- Recovery link (top right) -->
       <a href="http://www.nhs.uk/Conditions/Hip-replacement/Pages/Recovery.aspx"
-         style="top: 896px;
-                left: 30px;
-                width: 265px;
+         style="top: 969px;
+                left: 610px;
+                width: 59px;
+                height: 40px;"></a>
+
+      <!-- Recovery link (bottom left) -->
+      <a href="http://www.nhs.uk/Conditions/Hip-replacement/Pages/Recovery.aspx"
+         style="top: 999px;
+                left: 50px;
+                width: 235px;
                 height: 40px;"></a>
 
       <!-- Previous page link -->
       <a href="your-operation.html"
-         style="top: 1025px;
+         style="top: 1122px;
                 left: 30px;
                 width: 276px;
                 height: 54px;"></a>
