Final final tweaks

--- a/joint-replacement--surgery/going-home.html
+++ b/joint-replacement--surgery/going-home.html
@@ -24,18 +24,11 @@
                 width: 90px;
                 height: 40px;"></a>
 
-      <!-- Recovery link (top right) -->
-      <a href="http://www.nhs.uk/Conditions/Hip-replacement/Pages/Recovery.aspx"
-         style="top: 969px;
-                left: 610px;
-                width: 59px;
-                height: 40px;"></a>
-
-      <!-- Recovery link (bottom left) -->
+      <!-- Recovery link -->
       <a href="http://www.nhs.uk/Conditions/Hip-replacement/Pages/Recovery.aspx"
          style="top: 999px;
                 left: 50px;
-                width: 235px;
+                width: 275px;
                 height: 40px;"></a>
 
       <!-- Previous page link -->
