updating flat images for joint replacement 2nd tier content

--- a/hernia--steps-to-surgery/cover.html
+++ b/hernia--steps-to-surgery/cover.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="wrapper">
-      <img src="../assets/images/steps-to-surgery.png" id="page" border="0">
+      <img src="../assets/images/steps-to-surgery__hernia.png" id="page" border="0">
 
       <!-- Back to index -->
       <a href="../contents.html"
@@ -19,17 +19,44 @@
 
       <!-- booking CTA -->
       <a href="https://www.ebs.ncrs.nhs.uk/"
-         style="top: 687px;
+         style="top: 798px;
                 left: 105px;
-                width: 407px;
-                height: 65px;"></a>
+                width: 402px;
+                height: 64px;"></a>
 
-      <!-- preparing for pre-op -->
-      <a href="http://www.nhs.uk/Video/Pages/Pre-operativeassessments.aspx"
-         style="top: 1758px;
+      <!-- what to ask your surgeon -->
+
+          <a name="what-to-ask"
+         style="top: 900px;
+                left: 105px;
+                width: 250px;
+                height: 30px;"></a>
+
+
+      <a href="see-the-surgeon.html"
+         style="top: 1158px;
+                left: 105px;
+                width: 250px;
+                height: 30px;"></a>
+
+      <!-- Checking you are fit for surgey --> checking-you-are-fit
+      <a name="checking-you-are-fit"
+         style="top: 1500px;
                 left: 105px;
                 width: 407px;
-                height: 45px;"></a>
+                height: 30px;"></a>
+
+      <a href="surgery-checklist.html"
+         style="top: 1928px;
+                left: 105px;
+                width: 407px;
+                height: 30px;"></a>
+
+      <a href="http://www.nhs.uk/Video/Pages/Pre-operativeassessments.aspx"
+         style="top: 1958px;
+                left: 105px;
+                width: 407px;
+                height: 30px;"></a>
 
       <!-- on the day -->
       <a href="javascript:alert('This link is not active in this prototype');"
