completed all tier 2 content amends for joint replacement

--- a/joint-replacement--steps-to-surgery/cover.html
+++ b/joint-replacement--steps-to-surgery/cover.html
@@ -17,56 +17,88 @@
                 width: 90px;
                 height: 40px;"></a>
 
-      <!-- booking CTA -->
+      <!-- 01 booking CTA -->
       <a href="https://www.ebs.ncrs.nhs.uk/"
-         style="top: 687px;
+         style="top: 791px;
                 left: 105px;
                 width: 407px;
                 height: 65px;"></a>
 
-      <!-- preparing for pre-op -->
+      <!-- 02 seeing the surgeon -->
+      <a name="seeing-the-surgeon"
+         style="top: 900px;
+                left: 105px;
+                width: 250px;
+                height: 30px;"></a>
+
+
+      <a href="02-see-the-surgeon.html"
+         style="top: 1155px;
+                left: 105px;
+                width: 300px;
+                height: 25px;"></a>
+
+      <!-- 04 checking you are fit for surgery -->
+      <a name="checking-you-are-fit"
+         style="top: 1500px;
+                left: 105px;
+                width: 407px;
+                height: 30px;"></a>
+
+      <a href="04-surgery-checklist.html"
+         style="top: 1924px;
+                left: 105px;
+                width: 407px;
+                height: 30px;"></a>
+
       <a href="http://www.nhs.uk/Video/Pages/Pre-operativeassessments.aspx"
-         style="top: 1766px;
-                left: 98px;
+         style="top: 1954px;
+                left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
-      <!-- social services -->
-      <a href="http://local.direct.gov.uk/LDGRedirect/index.jsp?LGSL=209"
-         style="top: 2268px;
-                left: 119px;
+      <!-- 05 preparing for surgery -->
+      <a name="preparing-for-surgery"
+         style="top: 2000px;
+                left: 105px;
                 width: 407px;
                 height: 30px;"></a>
+      <a href="05-preparing-for-surgery.html"
+         style="top: 2638px;
+                left: 105px;
+                width: 257px;
+                height: 30px;"></a>
 
-      <!-- on the day -->
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2997px;
+      <!--06 on the day -->
+      <a name="day-of-surgery"
+         style="top: 2680px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
       <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 3027px;
+         style="top: 2952px;
+                left: 120px;
+                width: 250px;
+                height: 30px;"></a>
+
+      <a href="06-the-day-of-surgery.html"
+         style="top: 3040px;
+                left: 105px;
+                width: 240px;
+                height: 30px;"></a>
+
+
+      <!-- 07 Going home -->
+      <a name="going-home"
+         style="top: 3080px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 3060px;
+      <a href="07-help-with-recovery.html"
+         style="top: 3525px;
                 left: 105px;
-                width: 407px;
-                height: 30px;"></a>
-
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 3093px;
-                left: 105px;
-                width: 407px;
-                height: 30px;"></a>
-
-      <!-- recovery -->
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 3213px;
-                left: 115px;
                 width: 267px;
                 height: 30px;"></a>
 
