stray text removal

--- a/hernia--steps-to-surgery/cover.html
+++ b/hernia--steps-to-surgery/cover.html
@@ -39,7 +39,7 @@
                 width: 250px;
                 height: 30px;"></a>
 
-      <!-- Checking you are fit for surgey --> checking-you-are-fit
+      <!-- Checking you are fit for surgey -->
       <a name="checking-you-are-fit"
          style="top: 1500px;
                 left: 105px;
