--- a/joint-replacement--steps-to-surgery/05-preparing-for-surgery.html
+++ b/joint-replacement--steps-to-surgery/05-preparing-for-surgery.html
@@ -24,6 +24,21 @@
                 width: 50px;
                 height: 30px;"></a>
 
+      <!-- Needs assesment -->
+      <a href="http://local.direct.gov.uk/LDGRedirect/index.jsp?LGSL=209"
+         style="top: 730px;
+                left: 455px;
+                width: 95px;
+                height: 30px;"></a>
+
+      <!-- Needs assesment pt 2-->
+      <a href="http://local.direct.gov.uk/LDGRedirect/index.jsp?LGSL=209"
+         style="top: 760px;
+                left: 32px;
+                width: 275px;
+                height: 30px;"></a>                
+
+
     </div>
   </body>
 
