--- a/joint-replacement--steps-to-surgery/04-surgery-checklist.html
+++ b/joint-replacement--steps-to-surgery/04-surgery-checklist.html
@@ -24,6 +24,13 @@
                 width: 50px;
                 height: 30px;"></a>
 
+      <!-- MRSA Link-->
+      <a href="http://www.nhs.uk/conditions/MRSA/Pages/Introduction.aspx"
+         style="top: 490px;
+                left: 152px;
+                width: 55px;
+                height: 30px;"></a>
+
     </div>
   </body>
 
