hernia page copy amends and integration

--- a/hernia--steps-to-surgery/02-see-the-surgeon.html
+++ b/hernia--steps-to-surgery/02-see-the-surgeon.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="wrapper">
-      <img src="../assets/images/steps-to-surgery__hernia_what_to_ask.png" id="page" border="0">
+      <img src="../assets/images/02_steps-to-surgery__hernia_seeing_surgeon.png" id="page" border="0">
 
       <!-- Back to index -->
       <a href="../contents.html"
@@ -18,10 +18,17 @@
                 height: 40px;"></a>
 
       <!-- back-->
-      <a href="cover.html#what-to-ask"
+      <a href="cover.html#seeing-the-surgeon"
          style="top: 110px;
                 left: 25px;
                 width: 50px;
+                height: 30px;"></a>
+
+      <!-- RCS link-->
+      <a href="http://www.rcseng.ac.uk/patients/having-surgery/things-to-consider-before-having-surgery"
+         style="top: 1245px;
+                left: 230px;
+                width: 240px;
                 height: 30px;"></a>
 
     </div>
