--- a/hernia--steps-to-surgery/06-the-day-of-surgery.html
+++ b/hernia--steps-to-surgery/06-the-day-of-surgery.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="wrapper">
-      <img src="../assets/images/steps-to-surgery__hernia_checklist.png" id="page" border="0">
+      <img src="../assets/images/06_steps-to-surgery__hernia_day-of-surgery.png" id="page" border="0">
 
       <!-- Back to index -->
       <a href="../contents.html"
@@ -18,7 +18,7 @@
                 height: 40px;"></a>
 
       <!-- back-->
-      <a href="cover.html#checking-you-are-fit"
+      <a href="cover.html#day-of-surgery"
          style="top: 110px;
                 left: 25px;
                 width: 50px;
