--- a/hernia--steps-to-surgery/cover.html
+++ b/hernia--steps-to-surgery/cover.html
@@ -8,85 +8,80 @@
 
   <body>
     <div class="wrapper">
-      <img src="../assets/images/steps-to-surgery__hernia.png" id="page" border="0">
+      <img src="../assets/images/00_steps-to-surgery__hernia.png" id="page" border="0">
 
-      <!-- Back to index -->
+     <!-- Back to index -->
       <a href="../contents.html"
          style="top: 25px;
                 left: 25px;
                 width: 90px;
                 height: 40px;"></a>
 
-      <!-- booking CTA -->
+      <!-- 01 booking CTA -->
       <a href="https://www.ebs.ncrs.nhs.uk/"
-         style="top: 798px;
+         style="top: 791px;
                 left: 105px;
-                width: 402px;
-                height: 64px;"></a>
+                width: 407px;
+                height: 65px;"></a>
 
-      <!-- what to ask your surgeon -->
-
-          <a name="what-to-ask"
+      <!-- 02 seeing the surgeon -->
+      <a name="seeing-the-surgeon"
          style="top: 900px;
                 left: 105px;
                 width: 250px;
                 height: 30px;"></a>
 
 
-      <a href="see-the-surgeon.html"
-         style="top: 1158px;
+      <a href="02-see-the-surgeon.html"
+         style="top: 1155px;
                 left: 105px;
-                width: 250px;
-                height: 30px;"></a>
+                width: 300px;
+                height: 25px;"></a>
 
-      <!-- Checking you are fit for surgey -->
+      <!-- 04 checking you are fit for surgery -->
       <a name="checking-you-are-fit"
          style="top: 1500px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
-      <a href="surgery-checklist.html"
-         style="top: 1928px;
+      <a href="04-surgery-checklist.html"
+         style="top: 1849px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
-      <a href="http://www.nhs.uk/Video/Pages/Pre-operativeassessments.aspx"
-         style="top: 1958px;
+      <!-- 05 preparing for surgery -->
+      <a name="preparing-for-surgery"
+         style="top: 1880px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
-      <!-- on the day -->
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2667px;
+      <!--06 on the day -->
+      <a name="day-of-surgery"
+         style="top: 2500px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2697px;
+      <a href="06-the-day-of-surgery.html"
+         style="top: 2710px;
+                left: 105px;
+                width: 240px;
+                height: 30px;"></a>
+
+
+      <!-- 07 Going home -->
+      <a name="going-home"
+         style="top: 2760px;
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
 
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2730px;
+      <a href="07-help-with-recovery.html"
+         style="top: 3085px;
                 left: 105px;
-                width: 407px;
-                height: 30px;"></a>
-
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2763px;
-                left: 105px;
-                width: 407px;
-                height: 30px;"></a>
-
-      <!-- recovery -->
-      <a href="javascript:alert('This link is not active in this prototype');"
-         style="top: 2883px;
-                left: 115px;
                 width: 267px;
                 height: 30px;"></a>
 
