--- a/hernia--steps-to-surgery/04-surgery-checklist.html
+++ b/hernia--steps-to-surgery/04-surgery-checklist.html
@@ -31,8 +31,8 @@
                 width: 55px;
                 height: 30px;"></a>
 
-      <!-- Fake Link-->
-      <a href="#"
+      <!-- Fake video Link-->
+      <a href="javascript:alert('This link is not active in this prototype');"
          style="top: 996px;
                 left: 48px;
                 width: 650px;
