--- a/joint-replacement--steps-to-surgery/04-surgery-checklist.html
+++ b/joint-replacement--steps-to-surgery/04-surgery-checklist.html
@@ -31,6 +31,13 @@
                 width: 55px;
                 height: 30px;"></a>
 
+      <!-- Fake video Link-->
+      <a href="javascript:alert('This link is not active in this prototype');"
+         style="top: 996px;
+                left: 48px;
+                width: 650px;
+                height: 366px;"></a>
+
     </div>
   </body>
 
