copy amends to hernia and joint replacement

--- a/joint-replacement--steps-to-surgery/cover.html
+++ b/joint-replacement--steps-to-surgery/cover.html
@@ -18,7 +18,7 @@
                 height: 40px;"></a>
 
       <!-- 01 booking CTA -->
-      <a href="https://www.ebs.ncrs.nhs.uk/"
+      <a href="http://adobe.ly/29QwTbH"
          style="top: 791px;
                 left: 105px;
                 width: 407px;
@@ -42,13 +42,13 @@
       <a name="checking-you-are-fit"
          style="top: 1500px;
                 left: 105px;
-                width: 407px;
+                width: 405px;
                 height: 30px;"></a>
 
       <a href="04-surgery-checklist.html"
          style="top: 1824px;
                 left: 105px;
-                width: 407px;
+                width: 520px;
                 height: 30px;"></a>
 
       <!-- 05 preparing for surgery -->
@@ -57,10 +57,11 @@
                 left: 105px;
                 width: 407px;
                 height: 30px;"></a>
+
       <a href="05-preparing-for-surgery.html"
          style="top: 2500px;
                 left: 105px;
-                width: 257px;
+                width: 307px;
                 height: 30px;"></a>
 
       <!--06 on the day -->
