--- a/static/hernia--day-surgery/cover.html
+++ b/static/hernia--day-surgery/cover.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="wrapper">
-      <img src="../assets/images/day-guide--cover__hernia.png" id="page" border="0">
+      <img src="/assets/images/day-guide--cover__hernia.png" id="page" border="0">
 
       <!-- Back to index -->
       <a href="../contents.html"
